# Alternate-Library

./: .gitattributes  .gitignore  .prettierignore  .prettierrc  CMakeLists.txt  README.md  TDL.md  clean.ps1  make.ps1  test.ps1
Allocator/: Allocator.hpp  AllocatorDocumentation.md  AllocatorUML.txt
Array/: Array.hpp
ArrayPointer/: ArrayPointer.hpp
Exceptions/: Exceptions.hpp
Index/: Index.hpp
Keywords/: Keywords.hpp
Main/: CMakeLists.txt
Main/src/: Main.cpp
SharedArray/: SharedArray.hpp
SharedPointer/: SharedPointer.hpp
Types/: Types.hpp
UniqueArray/: UniqueArray.hpp
UniquePointer/: UniquePointer.hpp
Vector/: UML-Vector.txt  Vector.hpp  VectorDocumentation.md
u128/: CMakeLists.txt
u128/src/: u128.cpp  u128.hpp
